--- a/styles.css
+++ b/styles.css
@@ -52,15 +52,23 @@ body {
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
-.btn:active {
+button:active {
   outline: none;
 }
 
-#start-btn {
+button:focus {
+  outline: 0;
+}
+
+#start_stop {
   margin: 25px 0 30px 0;
 }
 
-.audio {
+#timer-label {
   text-align: center;
-  margin: 10px auto;
+  padding: 10px;
+}
+
+#timer-label h1 {
+  font-size: 2.7em;
 }
