--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   margin: 0 auto;
   border: 1px solid #000000;
   border-radius: 10px;
-  width: 60%;
+  width: 50%;
   text-align: center;
   background-color: rgba(132, 112, 67, 0.5);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
@@ -40,10 +40,6 @@ body {
   border-radius: 20px;
   margin: 5px;
   padding: 10px;
-}
-
-.bigger {
-  font-size: 4em;
 }
 
 .btn {
@@ -71,4 +67,9 @@ button:focus {
 
 #timer-label h1 {
   font-size: 2.7em;
+}
+
+#time-left h2 {
+  font-size: 8em;
+  margin-bottom: 20px;
 }
