--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,13 @@ body {
   font-size: 1.3em;
 }
 
+.jumbotron hr {
+  width: 30%;
+}
+
 .pomodoro {
   margin: 0 auto;
-  border: 1px solid #000000;
+  border: 2px solid #000000;
   border-radius: 10px;
   width: 50%;
   text-align: center;
@@ -56,7 +60,7 @@ button:focus {
   outline: 0;
 }
 
-#start_stop {
+#start_stop, #reset {
   margin: 25px 0 30px 0;
 }
 
@@ -67,9 +71,9 @@ button:focus {
 
 #timer-label h1 {
   font-size: 2.7em;
+  font-weight: bold;
 }
 
-#time-left h2 {
-  font-size: 8em;
-  margin-bottom: 20px;
+#timer-label h2 {
+  font-size: 6em;
 }
